--- a/Bookkeeping/Bookkeeping/Views/Tally/Detail.cshtml
+++ b/Bookkeeping/Bookkeeping/Views/Tally/Detail.cshtml
@@ -1,26 +1,28 @@
-﻿@model List<Bookkeeping.Models.TallyRecord>
+﻿@model IPagedList<Bookkeeping.Models.TallyRecord>
 @{
     Layout = null;
+    var i = 1;
 }
 
 <div class="row">
     <div class="col-md-12">
         <table class="table table-bordered table-hover">
             <tr>
-                <th>#</th>
-                <th>類別</th>
-                <th>日期</th>
-                <th>金額</th>
+                <th>@Html.DisplayNameFor(m => m.First().No)</th>
+                <th>@Html.DisplayNameFor(m => m.First().Category)</th>
+                <th>@Html.DisplayNameFor(m => m.First().Date)</th>
+                <th>@Html.DisplayNameFor(m => m.First().Money)</th>
             </tr>
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>@item.No</td>
+                    <td>@(i++)</td>
                     <td>@item.Category</td>
                     <td>@item.Date.Value.ToString("yyyy-MM-dd")</td>
                     <td>@item.Money.Value.ToString("N0")</td>
                 </tr>
             }
         </table>
+        @Html.PagedListPager(Model, page=>Url.Action("Index", new { page }))
     </div>
 </div>
