--- a/Bookkeeping/Bookkeeping/Views/Tally/Index.cshtml
+++ b/Bookkeeping/Bookkeeping/Views/Tally/Index.cshtml
@@ -15,13 +15,13 @@
         <div class="form-group">
             <label for="money" class="col-sm-2 control-label">@Html.DisplayNameFor(m => m.Money)</label>
             <div class="col-sm-10">
-                @Html.TextBoxFor(model=>model.Money, new { @class = "form-control", placeholder= "金額"})
+                @Html.TextBoxFor(model=>model.Money, new { @class = "form-control", placeholder= Html.DisplayNameFor(m => m.Money) })
             </div>
         </div>
         <div class="form-group">
             <label for="date" class="col-sm-2 control-label">@Html.DisplayNameFor(m => m.Date)</label>
             <div class="col-sm-10">
-                @Html.TextBoxFor(model => model.Date, new { @class = "form-control", placeholder = "日期" })
+                @Html.TextBoxFor(model => model.Date, new { @class = "form-control", placeholder = Html.DisplayNameFor(m => m.Date) })
             </div>
         </div>
         <div class="form-group">
@@ -40,13 +40,3 @@
 <div id="DetailData">
     @Html.Action("Detail","Tally")
 </div>
-
-@section scripts{
-    <script type="text/javascript" src="~/Scripts/page.js"></script>
-    <script type="text/javascript">
-        window.app.initial(elements = {
-            pageUrl: '@Url.Action("Detail", "Tally")',
-            targetDiv: 'DetailData'
-        });
-    </script>
-}
