--- a/Bookkeeping/Bookkeeping/Views/Tally/Index.cshtml
+++ b/Bookkeeping/Bookkeeping/Views/Tally/Index.cshtml
@@ -4,39 +4,63 @@
     Layout = "~/Views/Shared/_TallyLayout.cshtml";
 }
 
-<div class="well" style="margin-top:50px">
-    <form class="form-horizontal">
+
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true)
+
+    <div class="well form-horizontal" style="margin-top:50px">
         <div class="form-group">
             <label for="category" class="col-sm-2 control-label">@Html.DisplayNameFor(m=>m.Category)</label>
             <div class="col-sm-10">         
-              @Html.EnumDropDownListFor(model=>model.Category, "請選擇", new {@class = "form-control" })
+                @Html.EnumDropDownListFor(model=>model.Category, "請選擇", new { @class = "form-control" } )
+                @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <label for="money" class="col-sm-2 control-label">@Html.DisplayNameFor(m => m.Money)</label>
             <div class="col-sm-10">
-                @Html.TextBoxFor(model=>model.Money, new { @class = "form-control", placeholder= Html.DisplayNameFor(m => m.Money) })
+                @Html.EditorFor(model=>model.Money, new { @class = "form-control", placeholder= Html.DisplayNameFor(m => m.Money) })
+                @Html.ValidationMessageFor(model => model.Money, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <label for="date" class="col-sm-2 control-label">@Html.DisplayNameFor(m => m.Date)</label>
             <div class="col-sm-10">
-                @Html.TextBoxFor(model => model.Date, new { @class = "form-control", placeholder = Html.DisplayNameFor(m => m.Date) })
+                @Html.EditorFor(model => model.Date, new { @class = "form-control", placeholder = Html.DisplayNameFor(m => m.Date) })
+                @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <label for="description" class="col-sm-2 control-label">@Html.DisplayNameFor(m => m.Description)</label>
             <div class="col-sm-10">
                 @Html.TextAreaFor(model=>model.Description, new { @class = "form-control"})
+                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-8 col-sm-4">
-                <button type="submit" class="btn btn-default">送出</button>
+                <input type="submit" value="送出" class="btn btn-default" />
             </div>
         </div>
-    </form>
-</div>
+    </div>
+}
 <div id="DetailData">
     @Html.Action("Detail","Tally")
 </div>
+
+@section Scripts {
+    <script type="text/javascript">
+        $(function () {
+            $("#Date").datepicker({
+                dateFormat: 'yy-mm-dd',
+                maxDate : '+0D'
+            });
+        });
+    </script>
+}
+
+
+
+
