修正HW3作業-調整驗證Attribute,加入Ajax Form

--- a/Bookkeeping/Bookkeeping/Views/Shared/_TallyLayout.cshtml
+++ b/Bookkeeping/Bookkeeping/Views/Shared/_TallyLayout.cshtml
@@ -7,6 +7,8 @@
     <title>@ViewBag.Title - 我的記帳本</title>
     <link href="http://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link href="~/Content/alertify/alertify.core.css" rel="stylesheet">
+    <link href="~/Content/alertify/alertify.default.css" rel="stylesheet">
     <link href="~/Content/PagedList.css" rel="stylesheet" />
     <script>
         window.app = {};
@@ -44,6 +46,8 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.validate.min.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script type="text/javascript" src="~/Scripts/alertify/alertify.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
