--- a/Bookkeeping/Bookkeeping/Views/Tally/Index.cshtml
+++ b/Bookkeeping/Bookkeeping/Views/Tally/Index.cshtml
@@ -5,23 +5,23 @@
 }
 
 
-@using (Html.BeginForm())
+@using (Ajax.BeginForm("Index","Tally",new AjaxOptions { UpdateTargetId = "DetailData", OnSuccess= "OnSuccess" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <div class="well form-horizontal" style="margin-top:50px">
         <div class="form-group">
-            <label for="category" class="col-sm-2 control-label">@Html.DisplayNameFor(m=>m.Category)</label>
+            <label for="category" class="col-sm-2 control-label">@Html.DisplayNameFor(m => m.Category)</label>
             <div class="col-sm-10">         
-                @Html.EnumDropDownListFor(model=>model.Category, "請選擇", new { @class = "form-control" } )
+                @Html.EnumDropDownListFor(model => model.Category, "請選擇", new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Category, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
             <label for="money" class="col-sm-2 control-label">@Html.DisplayNameFor(m => m.Money)</label>
             <div class="col-sm-10">
-                @Html.EditorFor(model=>model.Money, new { @class = "form-control", placeholder= Html.DisplayNameFor(m => m.Money) })
+                @Html.EditorFor(model => model.Money, new { @class = "form-control", placeholder = Html.DisplayNameFor(m => m.Money) })
                 @Html.ValidationMessageFor(model => model.Money, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="form-group">
             <label for="description" class="col-sm-2 control-label">@Html.DisplayNameFor(m => m.Description)</label>
             <div class="col-sm-10">
-                @Html.TextAreaFor(model=>model.Description, new { @class = "form-control"})
+                @Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -46,19 +46,13 @@
         </div>
     </div>
 }
+
 <div id="DetailData">
-    @Html.Action("Detail","Tally")
+    @Html.Action("Detail", "Tally")
 </div>
 
 @section Scripts {
-    <script type="text/javascript">
-        $(function () {
-            $("#Date").datepicker({
-                dateFormat: 'yy-mm-dd',
-                maxDate : '+0D'
-            });
-        });
-    </script>
+    <script type="text/javascript" src="~/Scripts/tally/app.js?@DateTime.Now"></script>
 }
 
 
